Force scrollbar to prevent jumping

--- a/src/overrides.css
+++ b/src/overrides.css
@@ -1,4 +1,9 @@
 
+/* Force scrollbar to prevent jumping */
+body {
+    overflow-y: scroll;
+}
+
 /*--------------
  Semantic UI Collapsing Table Cells
 ---------------*/
